@@ -66,6 +66,7 @@ The following bugs are resolved with this release:
   [28896] strncmp-avx2-rtm and wcsncmp-avx2-rtm fallback on non-rtm
     variants when avoiding overflow
   [29528] elf: Call __libc_early_init for reused namespaces
+  [33185] Fix double-free after allocation failure in regcomp
 
 Version 2.33
 
